kibana/kibana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: kibana:5.6.4
        resources: {}
        ports:
        - name: traffic
          containerPort: 5601
        imagePullPolicy: IfNotPresent
