kibana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  type: ClusterIP
  selector:
    app: kibana
  ports:
  - name: traffic
    targetPort: 5601
    port: 80
